<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WelcomeActivity!</string>
	<string name="app_name">天鹰IT阅读</string>
	<string name="main">首页</string>
	<string name="help">帮助</string>
	<string name="it_business">IT商业</string>
	<string name="it_info">IT资讯</string>
	<string name="exit_hint">再按一次返回键退出程序</string>
	<string name="not_sdcard">你无SDcard，程序运行将不进行缓存</string>
	<string name="load_more">加载更多的数据</string>
	<string name="loading">加载中.....</string>
	<string name="loading_can_not_page">未加载完毕，无法进入下一页....</string>
	<string name="wait_load">此项还未加载，请耐心等待.....</string>
	<string name="load_over">已经没有更多数据.....</string>
	<string name="socket_timeout">连接超时，请检查网络后重试.....</string>
	<string name="not_data">请尝试重新点击加载文章......</string>
	<string name="update_info">软件更新通知消息</string>
	<string name="close">关闭</string>
</resources>
