<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">
	<LinearLayout android:orientation="horizontal" android:id="@+id/help_title_layout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentTop="true">
		<ImageView android:background="@drawable/icon"
			android:scaleType="fitCenter" android:layout_width="40.0dip"
			android:layout_height="40.0dip" />
		<TextView android:text="@string/app_name" android:textSize="12sp" android:textStyle="bold"
			android:layout_marginLeft="10dip" android:textScaleX="3.0" android:layout_marginTop="8dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
	<TextView android:background="#FF00AB00" android:id="@+id/border_title_bg"
		android:layout_width="fill_parent" android:layout_height="2dip"
		android:layout_below="@id/help_title_layout" />
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@id/border_title_bg">
		<ScrollView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="4">
			<TextView android:layout_width="fill_parent" android:id="@+id/help_content"
				android:layout_height="wrap_content" android:text="@string/load_more" />
		</ScrollView>
		<TextView android:background="#FF00AB00"
			android:layout_width="fill_parent" android:layout_height="2dip"
			android:layout_weight="1" />
		<Button android:text="@string/close" android:layout_width="wrap_content" android:id="@+id/help_close"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:layout_weight="1" android:background="@drawable/help_bn_close_bg"/>
	</LinearLayout>
</RelativeLayout>
