<?xml version="1.0" encoding="utf-8"?>
<!-- IT阅读主布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 头布局 -->

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/myapp_show_bg"
        android:orientation="horizontal"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/toolbar_progress_image"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:paddingLeft="5dp"
            android:src="@drawable/progress_image"
            android:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/default_online_bg"
        android:orientation="vertical" >

        <com.weiyi.itreader.view.MyGallery
            android:id="@+id/novel_gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:spacing="5dip"
            android:unselectedAlpha="0.6" />
        <!-- 底部布局 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/footer_main_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/footer_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/main"
                android:textColor="#808080"
                android:textScaleX="2.0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/footer_it_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/it_business"
                android:textColor="#808080"
                android:textScaleX="2.0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/footer_it_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/it_info"
                android:textColor="#808080"
                android:textScaleX="2.0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/footer_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="#808080"
                android:textScaleX="2.0"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>